--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,7 @@ body{
     border: 1px solid grey;
     border-radius: 10px;
     padding: 30px;
-    /* cursor: pointer; */
+    cursor: pointer;
 }
 
 .start-state:hover{
